policies/templates/gcp_iam_audit_log.yaml
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# GCPIAMAuditLogConstraintV1 verifies that audig logging is enabled in the
# given service with the given log types.

apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-iam-audit-log-v1
spec:
  crd:
    spec:
      names:
        kind: GCPIAMAuditLogConstraintV1
        plural: gcpiamauditlogconstraintsv1
      validation:
        openAPIV3Schema:
          properties:
            service:
              description: "The service that should have audit logging enabled. 
                Example: 'storage.googleapis.com' for Cloud Storage.
                'allServices' is a special value that covers all services"
              type: string
            log_types:
              description: "The log types that should be enabled. The valudes are numerical.
                1 == ADMIN_READ, 2 == DATA_WRITE, and 3 == DATA_READ"
              type: array
              items: integer
  targets:
   validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/iam_audit_log.rego")
           #
           # Copyright 2019 Google LLC
           #
           # Licensed under the Apache License, Version 2.0 (the "License");
           # you may not use this file except in compliance with the License.
           # You may obtain a copy of the License at
           #
           #      http://www.apache.org/licenses/LICENSE-2.0
           #
           # Unless required by applicable law or agreed to in writing, software
           # distributed under the License is distributed on an "AS IS" BASIS,
           # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
           # See the License for the specific language governing permissions and
           # limitations under the License.
           #
           
           package templates.gcp.GCPIAMAuditLogConstraintV1
           
           import data.validator.gcp.lib as lib
           
           deny[{
           	"msg": message,
           	"details": metadata,
           }] {
           	asset_types := {
           		"cloudresourcemanager.googleapis.com/Organization",
           		"cloudresourcemanager.googleapis.com/Folder",
           		"cloudresourcemanager.googleapis.com/Project",
           	}
           
           	input.asset.asset_type == asset_types[_]
           	count(expected_audit_configs) == 0
           	lib.get_constraint_params(input.constraint, params)
           	message := sprintf("IAM policy for %v does not have correct audit logs enabled in service %v", [input.asset.name, params.service])
           
           	metadata := {"resource": input.asset.name}
           }
           
           expected_audit_configs[config] {
           	configs := lib.get_default(input.asset.iam_policy, "audit_configs", {})
           	config := configs[_]
           	lib.get_constraint_params(input.constraint, params)
           	config.service == params.service
           	actual_log_types := {t | t = config.audit_log_configs[_].log_type}
           	expected_log_types := cast_set(params.log_types)
           	missing_log_types := expected_log_types - actual_log_types
           	count(missing_log_types) == 0
           }
           #ENDINLINE
